--- a/api-test.html
+++ b/api-test.html
@@ -6,7 +6,7 @@
   <script>
     function initMap() {
       var mapOptions = {
-        center: { lat: -23.57925312686396, lng: -46.63698278616559},
+        center: { lat: -23.579253, lng: -46.63698},
         zoom: 8
       };
       var map = new google.maps.Map(document.getElementById('map'), mapOptions);
