Adicionado um ! no Hello World do index e um texto 'sobre nós' no sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -1,1 +1,38 @@
-sobre
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre Nós</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Sobre Nossa História</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Quem Somos</h2>
+            <p>Somos uma equipe dedicada a criar soluções digitais inovadoras para nossos clientes. Nossa paixão é combinar design criativo com tecnologia de ponta.</p>
+        </section>
+        <section>
+            <h2>Nossa Missão</h2>
+            <p>Nossa missão é simplificar a vida das pessoas através da tecnologia, oferecendo produtos e serviços que melhorem a eficiência e a experiência do usuário.</p>
+        </section>
+        <section>
+            <h2>Nossa Equipe</h2>
+            <p>Nossa equipe é composta por profissionais experientes em design, desenvolvimento e marketing digital. Trabalhamos juntos para alcançar os melhores resultados.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
